--- a/client/src/components/History/HistoryViews/JobHistoryModal.module.scss
+++ b/client/src/components/History/HistoryViews/JobHistoryModal.module.scss
@@ -48,6 +48,7 @@
   min-width: 200px;
 }
 .right-panel {
+    width: 100%;
   overflow-y: scroll;
 
   /* Cross-browser solution to padding ignored by overflow (in spec-compliant Firefox) */
