--- a/client/src/components/DataFiles/DataFilesSystemSelector/DataFilesSystemSelector.module.scss
+++ b/client/src/components/DataFiles/DataFilesSystemSelector/DataFilesSystemSelector.module.scss
@@ -1,6 +1,7 @@
 .system-select {
   margin-left: 1em;
   margin-right: 1em;
-  color: var(--global-color-accent--normal);
   font-style: italic;
+  display: inline-block;
+  vertical-align: text-bottom;
 }
