FP-341: Fix: Restore margin-auto (element deleted)
When an element was deleted, a style for it became ineffectual.

Style must apply to 2nd-to-last widget before clear button after search.

But with all such widgets removed, the style must go on clear button.

--- a/client/src/components/DataFiles/DataFilesSearchbar/DataFilesSearchbar.module.css
+++ b/client/src/components/DataFiles/DataFilesSearchbar/DataFilesSearchbar.module.css
@@ -24,7 +24,9 @@
 .summary-fieldset {
     /* No styles necessary, but defining class for consistency */
 }
-.filter-fieldset {
+/* NOTE: Whenever filter and/or status message are restored, this selector must select the rightmost element of those */
+.clear-button {
+/* .filter-fieldset { */
     margin-left: auto; /* this is how to "justify-self" on flex children */
 }
 .clear-button {
