--- a/client/src/index.css
+++ b/client/src/index.css
@@ -42,11 +42,15 @@ code {
         (would be influenced by force stretch), so force stretch outward. */
 html,
 body {
+  /* As a stretched item */
   position: absolute;
   left: 0;
   right: 0;
   top: 0;
   bottom: 0;
+}
+body {
+  overflow: hidden;
 }
 
 /* Allow expansion (with respect to ancestors and siblings)
@@ -63,16 +67,31 @@ body {
 /* FAQ: The `.content` and `#react-root` boxes are only as tall as their content
         (which may be shorter than window height), can have siblings elements
         (would be influenced by force stretch), so gently stretch outward. */
-body,
-body > .content,
-#react-root {
+body {
+  /* As a flex container */
   display: flex;
   flex-direction: column;
 }
-body > .content,
-#react-root,
-/* FAQ: If the app root element has only a single child,
-        then it should be the same height as the app root */
-#react-root > :only-child {
+body > .content {
+  /* As a flex item */
   flex-grow: 1;
+
+  /* As a flex container */
+  display: flex;
+  flex-direction: column;
+}
+#react-root {
+  /* As a flex item */
+  flex-grow: 1;
+
+  /* As a stretched item container */
+  position: relative;
+}
+#react-root > :only-child {
+  /* As a stretched item */
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
 }
