--- a/client/src/components/Allocations/Allocations.scss
+++ b/client/src/components/Allocations/Allocations.scss
@@ -31,6 +31,9 @@
     display: flex;
     flex-direction: row;
 
+    /* Allow children to `overflow: scroll` but match height of this parent */
+    overflow: auto;
+
     border-top: 1px solid #707070;
 }
 /* Make right-most item fill up remaining horizontal space */
