--- a/client/src/components/Applications/AppForm/AppForm.scss
+++ b/client/src/components/Applications/AppForm/AppForm.scss
@@ -1,7 +1,14 @@
 #appDetail-wrapper {
+    /* As a flex item */
     flex-grow: 1;
+
+    /* As a flex container */
     display: flex;
     flex-direction: row;
+
+    /* Allow children to `overflow: scroll` but match height of this parent */
+    overflow: auto;
+
     height: 100%; /* Be consistent with `#appDetail-error`/`.app-placeholder` (which can exist at the same location),
                      so that `appBrowser-wrapper` height does not change based on sibling content */
     padding-top: 15px;
@@ -9,7 +16,7 @@
     padding-bottom: 30px;
 }
 
-/* Overwrite independent opinion of Bootstrap styles */
+/* Overiwrte independent opinion of Bootstrap styles */
 /* ???: Is `.jumbotron` used without Design review? */
 /* ???: From where does `.jumbotron` originate? */
 #appDetail-wrapper .jumbotron {
@@ -26,6 +33,7 @@
 }
 
 .appInfo-wrapper {
+    overflow-y: scroll;
     flex: 0.5 1 0;
     max-width: 400px;
     border-right: 1px solid #989898;
