--- a/client/src/components/History/HistoryViews/JobHistoryModal.css
+++ b/client/src/components/History/HistoryViews/JobHistoryModal.css
@@ -9,3 +9,10 @@
 .job-history-modal .nav-link:hover {
     text-decoration: underline;
 }
+
+/* Overrides Bootstrap `.modal-title`, to get the contents of reactstrap ModalHeader
+  to have the correct width instead of overflowing.  Setting to 95% instead of
+  100% to keep space for close button */
+.job-history-modal .modal-title {
+    width: 95%;
+}
