--- a/client/src/components/_common/DescriptionList/DescriptionList.module.scss
+++ b/client/src/components/_common/DescriptionList/DescriptionList.module.scss
@@ -34,6 +34,7 @@
   content: '|';
   display: inline-block;
 }
+
 .is-horz.is-narrow > .key ~ .key::before {
   padding-left: 0.5em;
   padding-right: 0.5em;
@@ -48,7 +49,10 @@
 .is-vert.is-narrow > .value { padding-left: 0; }
 .is-vert.is-wide > .value   { padding-left: 2.5rem; } /* 40px Firefox default margin */
 
-/* Truncate specific edge case */
+/* Truncate specific edge cases */
+.is-horz.is-wide > .value {
+  @include truncate-with-ellipsis;
+}
 .is-vert.is-narrow > .value {
   @include truncate-with-ellipsis;
 }
