--- a/client/src/components/Applications/AppForm/AppForm.scss
+++ b/client/src/components/Applications/AppForm/AppForm.scss
@@ -45,6 +45,9 @@
     display: flex;
     align-items: center;
 }
+.appInfo-documentation .icon {
+    margin-right: 0.5em;
+}
 
 .appForm-textInput label,
 .appForm-select label {
