FP-110: Quick: Fix & extract CSS Data Files

--- a/client/src/components/DataFiles/DataFilesModals/DataFilesModals.scss
+++ b/client/src/components/DataFiles/DataFilesModals/DataFilesModals.scss
@@ -42,3 +42,8 @@
       font-size: 18px;
     }
 }
+
+/* Quick port of inline style to stylesheet */
+.dataFilesValidationMessage {
+  padding-top: 10px;
+}
