Quick: Add comment about  icon

--- a/client/src/styles/trumps/icon.fonts.css
+++ b/client/src/styles/trumps/icon.fonts.css
@@ -195,6 +195,7 @@
 .icon-multiple-coversation:before {
   content: "\e930";
 }
+/* TACC: This is meant for non-published storage. regardless of which system it lives on */
 .icon-my-data:before {
   content: "\e931";
 }
