Quick: Improve comment clarity

--- a/client/src/components/Applications/AppForm/AppForm.scss
+++ b/client/src/components/Applications/AppForm/AppForm.scss
@@ -16,7 +16,7 @@
     padding-bottom: 30px;
 }
 
-/* Overiwrte independent opinion of Bootstrap styles */
+/* Overwrite Bootstrap's opinionated style */
 /* ???: Is `.jumbotron` used without Design review? */
 /* ???: From where does `.jumbotron` originate? */
 #appDetail-wrapper .jumbotron {
