--- a/client/src/components/UIPatterns/UIPatterns.module.scss
+++ b/client/src/components/UIPatterns/UIPatterns.module.scss
@@ -7,6 +7,8 @@
 .container {
   // FAQ: Extra padding is added to bottom only for this section
   padding: 20px 40px 40px 25px;
+
+  overflow: auto;
 }
 
 .header {
