Task/fp 228/fp 110 remove old icons (#132)
* FP-515: Install Cortal 1.2

- Disable linting of `icon.fonts.css`.
- Support WOFF in Webpack config.
- Update several files (and tests) to use new icon names:
    - AppIcon
    - AppBrowser
    - DataFilesListingCell
    - DataFilesSidebar
    - DataFilesToolbar
    - Sidebar
    - TicketModal
- Replace old Core Portal font with Cortal Icons font.
- Migrate font styles to their own stylesheet.
- Add icon aliases:
    - icon-collapse (icon-contract)

* FP-515: Disable an "extra icon"

* FP-515: Fix neglected instances of `icon-upload`

* FP-110: SystemsPushKeysModal & `_common/README.md`

* FP-228: Allow extra spaces in CSS before ruleset

* FP-110: Allocations…

* FP-110: App… & `trumps/bootstrap.css`

* FP-110: Quick: Add newly-supported span-in-button

* FP-110: Use consistent Icon text
    - The errors are "errors" but are styled like warnings.
    - UI has only provided one example of an error.
    - So, without clarity, I will be consistent.

* FP-288: Use Icon-not-i for app category icon

* FP-110: Use a `<Message>`. Update+Move related CSS

* FP-110: Use `<Message>` for Rename modal

* FP-110: Use <Message> for all `.appDetail-error`'s

* FP-110: Use <Message> in SystemMonitor

* FP-110: Use <Message> in TicketsLayout

--- a/client/src/styles/trumps/icon.fonts.css
+++ b/client/src/styles/trumps/icon.fonts.css
@@ -30,6 +30,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+/* TACC: Remove support for extra icon that should not be used */
+/*
+.icon-jobs-history:before {
+  content: "\e95a";
+}
+*/
 .icon-jobs:before {
   content: "\e95b";
 }
@@ -189,6 +195,7 @@
 .icon-multiple-coversation:before {
   content: "\e930";
 }
+/* TACC: This is meant for non-published storage. regardless of which system it lives on */
 .icon-my-data:before {
   content: "\e931";
 }
