--- a/client/src/components/Applications/AppForm/AppForm.scss
+++ b/client/src/components/Applications/AppForm/AppForm.scss
@@ -45,6 +45,9 @@
     display: flex;
     align-items: center;
 }
+.appInfo-documentation .icon {
+    margin-right: 0.5em;
+}
 
 .appForm-textInput label,
 .appForm-select label {
@@ -71,11 +74,9 @@
 }
 
 .appDetail-error {
-    display: flex;
+    display: flex; /* overwrite `Message` */
     justify-content: center;
     height: 100%; /* Be consistent with `#appDetail-wrapper`/`.app-placeholder` (which can exist at the same location),
                      so that `appBrowser-wrapper` height does not change based on sibling content */
-    align-items: center;
-    color: #9d85ef;
     padding: 30px;
 }
