--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -11,10 +11,9 @@
 
 /* GENERIC */
 @import url('./generics/roots.css');
-@import url('./generics/text-semantics.css');
 
 /* ELEMENTS */
-@import url('./elements/inline-text.css');
+@import url('./elements/text-semantics.css');
 
 /* OBJECTS */
 /* NOTE: For the most part, allow React components to explicitely import as needed */
@@ -26,3 +25,4 @@
 /* TRUMPS */
 /* NOTE: For the most part, allow React components to explicitely import as needed */
 @import url('./trumps/icon.css');
+@import url('./trumps/bootstrap.css');
