Add support for cell classname in infinite scroll table

--- a/client/src/components/Jobs/Jobs.scss
+++ b/client/src/components/Jobs/Jobs.scss
@@ -24,6 +24,10 @@
   td:nth-child(5) {
     min-width: 10em;
   }
+  .job__status:has(button) {
+    padding-top: 2px;
+    padding-bottom: 2px;
+  }
 }
 
 .jobs-detailed-view {
