--- a/client/src/components/Sidebar/Sidebar.module.scss
+++ b/client/src/components/Sidebar/Sidebar.module.scss
@@ -1,9 +1,13 @@
 $width: 215px;
 
 .root {
+    overflow-y: auto;
+    flex-wrap: nowrap;
+
     min-width: $width;
     max-width: $width;
     width: $width;
+
     background: #f4f4f4;
     border-right: 1px solid rgba(112, 112, 112, 0.25);
     padding-top: 20px;
