--- a/client/src/components/Workbench/Workbench.scss
+++ b/client/src/components/Workbench/Workbench.scss
@@ -104,9 +104,6 @@
   align-items: center;
 }
 
-.workbench__alert {
-  padding: 20px 20px 0 20px;
-  .alert {
-    margin-bottom: 0px;
-  }
+.welcomeMessage {
+  margin: 20px 20px 0px 20px;
 }
