--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -17,6 +17,7 @@
 
 /* OBJECTS */
 /* NOTE: For the most part, allow React components to explicitely import as needed */
+@import url('./objects/o-fixed-header-table.css');
 
 /* COMPONENTS */
 /* NOTE: For the most part, allow React components to explicitely import as needed */
