Fix Scroll: Alloc's (fixes to the fix)

--- a/client/src/components/Allocations/AllocationsTables.module.scss
+++ b/client/src/components/Allocations/AllocationsTables.module.scss
@@ -1,6 +1,10 @@
 /* HACK: Necessary evil to allow flex item + scroll + table */
 /* WARNING: DOES NOT SOLVE PROBLEM, WES! */
 .wrapper {
+  /* Force (how?!) `#allocations-sidebar` to accept its defined width */
+  /* FAQ: Moved from `.allocations-table table` during FP-621 (dec710f) */
+  width: 100%;
+
   overflow-y: hidden;
 
   /* This mimics History > Jobs table */
