task/FP-327 - Onboarding welcome messages (#191)
* Alert messages

* Revert "Alert messages"

This reverts commit d6a404ad14bf507642604d6b6ff78c9b1a8de9e4.

* Refactor messages to workbench component

* Add welcome message state reducers and sagas

* Refactor css

* Dismissable messages

* Dismissal is working

* Fix workbench-content height artifact

* eslint

* New language from thbrown

* eslint

* eslint

* eslint

* eslint

* Change color of messages to secondary

Co-authored-by: Sal Tijerina <r.sal.tijerina@gmail.com>

--- a/client/src/components/Workbench/Workbench.scss
+++ b/client/src/components/Workbench/Workbench.scss
@@ -18,6 +18,11 @@
     height: 100%;
 }
 
+.workbench-content > :nth-child(2) {
+    flex-grow: 1;
+}
+
+
 .workbench-content .wb-text-primary {
     color: #484848;
 }
@@ -102,4 +107,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.welcomeMessage {
+  margin: 20px 20px 0 20px;
+  flex-grow: 0;
 }
