Quick: Comment to avoid proliferation of bad class

--- a/client/src/components/_common/InfiniteScrollTable/InfiniteScrollTable.scss
+++ b/client/src/components/_common/InfiniteScrollTable/InfiniteScrollTable.scss
@@ -1,4 +1,5 @@
 .InfiniteScrollTable,
+/* WARNING: Do NOT use `FiniteScrollTable`. Instead, implement `InfiniteScrollTable` */
 .FiniteScrollTable {
   --cell-horizontal-padding: 0.35em; /* horizontal cell padding for inter-column buffer */
 
