FP-662: Create _common/Section component

--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -5,6 +5,7 @@
 @import url('./settings/color.css');
 @import url('./settings/font.css');
 @import url('./settings/border.css');
+@import url('./settings/space.css');
 
 /* TOOLS */
 /* … */
