--- a/client/src/components/Sidebar/Sidebar.module.scss
+++ b/client/src/components/Sidebar/Sidebar.module.scss
@@ -26,3 +26,15 @@ $width: 215px;
   font-size: 0.75em; /* ~20px (16px design * 1.2 design-to-app ratio) */
   font-weight: 500;
 }
+
+.feedback-nav-item {
+  align-self: center;
+  margin-top: auto;
+  margin-bottom: 5px;
+  button {
+    font-size: 0.75em;
+    &:hover {
+      color: #9d85ef;
+    }
+  }
+}
