--- a/client/src/components/FeedbackForm/FeedbackModal.module.scss
+++ b/client/src/components/FeedbackForm/FeedbackModal.module.scss
@@ -1,5 +1,8 @@
-@media (min-width: 1200px) {
-  .feedback-modal {
+.feedback-modal {
+  a {
+      color: #9d85ef;
+  }
+  @media (min-width: 1200px) {
     max-width: 600px;
   }
 }
