Quick: Normalize font weight for all headings

--- a/client/src/styles/elements/text-semantics.css
+++ b/client/src/styles/elements/text-semantics.css
@@ -1,4 +1,4 @@
-/* GENERIC: Text Semantics */
+/* ELEMENTS: (Inline) Text Semantics */
 /* SEE: https://developer.mozilla.org/en-US/docs/Web/HTML/Element#Inline_text_semantics */
 
 /* TODO: Migrate `index.scss` styles for `code` */
