--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -14,6 +14,7 @@
 @import url('./generics/roots.css');
 
 /* ELEMENTS */
+@import url('./elements/sectioning.css');
 @import url('./elements/text-semantics.css');
 
 /* OBJECTS */
